--- a/GameMain.xaml
+++ b/GameMain.xaml
@@ -2,15 +2,16 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Title="GameMain" Height="560" Width="800" Background="GhostWhite" Loaded="Page_Loaded">
-    <Canvas>
+    <Canvas x:Name="Carrier" MouseLeftButtonDown="Carrier_MouseLeftButtonDown">
         <TextBlock Height="150" Width="150" HorizontalAlignment="Right" Margin="0,50,50,0"  VerticalAlignment="Top" Name="txtUserMoney" Style="{DynamicResource BodyCenter-Sketch}" FontSize="32" Canvas.Left="599.853" Canvas.Top="0" />
         <TextBlock Height="150" Width="150.03" HorizontalAlignment="Left" Margin="50,50,0,0"  VerticalAlignment="Top" Name="txtUsername" Style="{DynamicResource BodyCenter-Sketch}" FontSize="32" Canvas.Left="0" Canvas.Top="0" />
+        <TextBlock Height="65.013" Width="150.03" Name="txtStatus" Style="{DynamicResource BodyCenter-Sketch}" FontSize="32" Canvas.Left="311.729" Canvas.Top="50" />
         <Button Height="50" Width="120" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="48,0,0,50" Name="btnAdventure" Click="btnAdventure_Click" Style="{DynamicResource Button-Sketch}" FontSize="22" Canvas.Left="2" Canvas.Top="470">Adventure</Button>
         <Button Height="50" Width="120.024" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="188,0,0,50" Name="btnFeed" Click="btnFeed_Click" Style="{DynamicResource Button-Sketch}" FontSize="28" Canvas.Left="5.001" Canvas.Top="470">Feed</Button>
         <Button Height="50" VerticalAlignment="Bottom" Margin="328,0,352,50" Name="btnShopping" Click="btnShopping_Click"  Style="{DynamicResource Button-Sketch}" FontSize="22" Canvas.Left="8.335" Canvas.Top="470" Width="110.022">Shopping</Button>
         <Button Height="50" Width="120.024" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,212,50" Name="btnHelp" Click="btnHelp_Click" Style="{DynamicResource Button-Sketch}" FontSize="28" Canvas.Left="465.093" Canvas.Top="470.01">Help</Button>
-       <Button Margin="0,0,50,50" Style="{DynamicResource Button-Sketch}" VerticalAlignment="Bottom" Height="50.01" Name="btnBack" Content="Go Back" Click="btnBack_Click" HorizontalAlignment="Right" Width="150" FontSize="28" Canvas.Left="600" Canvas.Top="470" />
-        
+        <Button Margin="0,0,50,50" Style="{DynamicResource Button-Sketch}" VerticalAlignment="Bottom" Height="50.01" Name="btnBack" Content="Go Back" Click="btnBack_Click" HorizontalAlignment="Right" Width="150" FontSize="28" Canvas.Left="600" Canvas.Top="470" />
+        <Image Canvas.Left="672" Canvas.Top="338.401" Height="96.686" Name="imgArrow1" Stretch="Fill" Width="128" Source="/SPG;component/Resources/Background/Arrow1.png" MouseLeftButtonDown="imgArrow1_MouseLeftButtonDown"/> 
         
     </Canvas>
 </Page>
