--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
     Title="Voice Idioms Chaining Game @ BJTU Speech Group 2009" 
     Height="600" Width="800" 
     WindowStartupLocation="CenterScreen" 
-    Source = "Menu.xaml" 
+    Source = "GameMain.xaml" 
     ResizeMode="NoResize" 
     ShowsNavigationUI="False"
     Background="GhostWhite" 
