--- a/Resources/SketchStyle.xaml
+++ b/Resources/SketchStyle.xaml
@@ -24,7 +24,7 @@
     <SolidColorBrush x:Key="FocusedBorder-Sketch" Color="#FF000000"/>
     <SolidColorBrush x:Key="DisabledBorder-Sketch" Color="#FF9F9F9F"/>
     <SolidColorBrush x:Key="SelectedBackground-Sketch" Color="#FFAFAFAF"/>
-    <FontFamily x:Key="FontFamily-Sketch">/SPG;Component/Fonts/#Buxton Sketch</FontFamily>
+    <FontFamily x:Key="FontFamily-Sketch">/SPG;Component/Fonts/#汉仪丫丫体简</FontFamily>
     <sys:Double x:Key="SizeDouble-Sketch">19</sys:Double>
     <FontWeight x:Key="FontWeight-Sketch">Normal</FontWeight>
 
@@ -65,6 +65,9 @@
 
     <!-- Sketch Button -->
     <Style x:Key="Button-Sketch" TargetType="{x:Type Button}" BasedOn="{x:Null}">
+    	<Style.Resources>
+    		<Storyboard x:Key="OnMouseEnter1"/>
+    	</Style.Resources>
         <Setter Property="FontFamily" Value="{DynamicResource FontFamily-Sketch}"/>
         <Setter Property="FontSize" Value="{DynamicResource SizeDouble-Sketch}"/>
         <Setter Property="Foreground" Value="{DynamicResource BaseForeground-Sketch}"/>
@@ -73,31 +76,93 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
+                	<ControlTemplate.Resources>
+                		<Storyboard x:Key="OnMouseEnter1">
+                			<DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Duration="00:00:00.0010000" Storyboard.TargetName="SketchRectangleUC" Storyboard.TargetProperty="(UIElement.Opacity)">
+                				<SplineDoubleKeyFrame KeyTime="00:00:00" Value="1"/>
+                			</DoubleAnimationUsingKeyFrames>
+                			<DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Duration="00:00:00.0010000" Storyboard.TargetName="contentPresenter" Storyboard.TargetProperty="(UIElement.Opacity)">
+                				<SplineDoubleKeyFrame KeyTime="00:00:00" Value="1"/>
+                			</DoubleAnimationUsingKeyFrames>
+                			<DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="SketchRectangleUC" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)">
+                				<SplineDoubleKeyFrame KeyTime="00:00:00" Value="0"/>
+                				<SplineDoubleKeyFrame KeyTime="00:00:00.2000000" Value="0"/>
+                			</DoubleAnimationUsingKeyFrames>
+                			<DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="contentPresenter" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)">
+                				<SplineDoubleKeyFrame KeyTime="00:00:00" Value="0"/>
+                				<SplineDoubleKeyFrame KeyTime="00:00:00.2000000" Value="0"/>
+                			</DoubleAnimationUsingKeyFrames>
+                			<DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="SketchRectangleUC" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleX)">
+                				<SplineDoubleKeyFrame KeyTime="00:00:00" Value="1"/>
+                				<SplineDoubleKeyFrame KeyTime="00:00:00.2000000" Value="1.3"/>
+                			</DoubleAnimationUsingKeyFrames>
+                			<DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="contentPresenter" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleX)">
+                				<SplineDoubleKeyFrame KeyTime="00:00:00" Value="1"/>
+                				<SplineDoubleKeyFrame KeyTime="00:00:00.2000000" Value="1.3"/>
+                			</DoubleAnimationUsingKeyFrames>
+                			<DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="SketchRectangleUC" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleY)">
+                				<SplineDoubleKeyFrame KeyTime="00:00:00" Value="1"/>
+                				<SplineDoubleKeyFrame KeyTime="00:00:00.2000000" Value="1.3"/>
+                			</DoubleAnimationUsingKeyFrames>
+                			<DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="contentPresenter" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleY)">
+                				<SplineDoubleKeyFrame KeyTime="00:00:00" Value="1"/>
+                				<SplineDoubleKeyFrame KeyTime="00:00:00.2000000" Value="1.3"/>
+                			</DoubleAnimationUsingKeyFrames>
+                		</Storyboard>
+                		<Storyboard x:Key="Smaller"/>
+                	</ControlTemplate.Resources>
                     <!-- We use Grid as a root because it is easy to add more elements to customize the button -->
                     <Grid x:Name="Grid">
                         <!-- Content Presenter is where the text content etc is placed by the control -->
-                        <SketchControls:SketchRectangleUC x:Name="SketchRectangleUC" BorderBrush="{TemplateBinding BorderBrush}" ExtensionLength="0" ExtensionVariance="0" StrokeWidth="2" SegmentLength="8" Background="{TemplateBinding Background}" SegmentVariance="0.1" SegmentOffset="0.12" FocusVisualStyle="{DynamicResource FocusControl-Sketch}"/>
-                        <ContentPresenter HorizontalAlignment="Center"  VerticalAlignment="Center" Content="{TemplateBinding Content}" Margin="8,0,8,0"/>
+                        <SketchControls:SketchRectangleUC x:Name="SketchRectangleUC" BorderBrush="{TemplateBinding BorderBrush}" ExtensionLength="0" ExtensionVariance="0" StrokeWidth="2" SegmentLength="8" Background="{TemplateBinding Background}" SegmentVariance="0.1" SegmentOffset="0.12" FocusVisualStyle="{DynamicResource FocusControl-Sketch}" RenderTransformOrigin="0.5,0.5">
+                        	<SketchControls:SketchRectangleUC.RenderTransform>
+                        		<TransformGroup>
+                        			<ScaleTransform/>
+                        			<SkewTransform/>
+                        			<RotateTransform/>
+                        			<TranslateTransform/>
+                        		</TransformGroup>
+                        	</SketchControls:SketchRectangleUC.RenderTransform>
+                        </SketchControls:SketchRectangleUC>
+                        <ContentPresenter x:Name="contentPresenter" HorizontalAlignment="Center"  VerticalAlignment="Center" Content="{TemplateBinding Content}" Margin="8,0,8,0" RenderTransformOrigin="0.5,0.5">
+                        	<ContentPresenter.RenderTransform>
+                        		<TransformGroup>
+                        			<ScaleTransform/>
+                        			<SkewTransform/>
+                        			<RotateTransform/>
+                        			<TranslateTransform/>
+                        		</TransformGroup>
+                        	</ContentPresenter.RenderTransform>
+                        </ContentPresenter>
                     </Grid>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="true">
-                            <Setter Property="Background" TargetName="SketchRectangleUC" Value="{DynamicResource MouseOverBackground-Sketch}"/>
-                        </Trigger>
-                        <Trigger Property="IsPressed" Value="True">
-                            <Setter Property="Background" TargetName="SketchRectangleUC" Value="{DynamicResource PressedBackground-Sketch}"/>
-                        </Trigger>
-                    </ControlTemplate.Triggers>
+                		<Trigger Property="IsMouseOver" Value="true">
+                			<Setter Property="Background" TargetName="SketchRectangleUC" Value="{DynamicResource MouseOverBackground-Sketch}"/>
+                		</Trigger>
+                		<Trigger Property="IsPressed" Value="True">
+                			<Setter Property="Background" TargetName="SketchRectangleUC" Value="{DynamicResource PressedBackground-Sketch}"/>
+                		</Trigger>
+                		<EventTrigger RoutedEvent="Mouse.MouseLeave">
+                			<RemoveStoryboard BeginStoryboardName="OnMouseEnter1_BeginStoryboard"/>
+                		</EventTrigger>
+                		<EventTrigger RoutedEvent="Mouse.MouseEnter">
+                			<BeginStoryboard x:Name="OnMouseEnter1_BeginStoryboard" Storyboard="{StaticResource OnMouseEnter1}"/>
+                		</EventTrigger>
+                	</ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
         <Setter Property="FontWeight" Value="{DynamicResource FontWeight-Sketch}"/>
         <Setter Property="FocusVisualStyle" Value="{DynamicResource FocusControl-Sketch}"/>
         <Style.Triggers>
-            <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Foreground" Value="{DynamicResource DisabledForeground-Sketch}"/>
-                <Setter Property="BorderBrush" Value="{DynamicResource DisabledBorder-Sketch}"/>
-            </Trigger>
-        </Style.Triggers>
+    		<EventTrigger RoutedEvent="Mouse.MouseEnter">
+    			<BeginStoryboard Storyboard="{StaticResource OnMouseEnter1}"/>
+    		</EventTrigger>
+    		<Trigger Property="IsEnabled" Value="False">
+    			<Setter Property="Foreground" Value="{DynamicResource DisabledForeground-Sketch}"/>
+    			<Setter Property="BorderBrush" Value="{DynamicResource DisabledBorder-Sketch}"/>
+    		</Trigger>
+    	</Style.Triggers>
     </Style>
 
     <!-- Sketch CheckBox -->
